--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,11 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Splash">
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+    <!--android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Splash">-->
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+
+
+<!--</RelativeLayout>-->
+<locale.example.ngondo.widget.TypefacedTextView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:namespace="http://schemas.android.com/apk/locale.example.ngondo"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:text="@string/loc"
+    android:textColor="#fff"
+    android:textSize="50dp"
+    android:background="@color/primary"
+    namespace:typeface="Roboto-Thin.ttf"
+    android:gravity="center_vertical|center_horizontal">
+
+
+</locale.example.ngondo.widget.TypefacedTextView>
