--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,6 +15,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:text="@string/loc"
+    android:id="@+id/title"
     android:textColor="#fff"
     android:textSize="50dp"
     android:background="@color/primary"
