--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -37,9 +37,8 @@
         android:id="@+id/button"
         android:text="@string/ok"
         android:background="@color/accent"
-        android:layout_alignParentBottom="true"
         android:textColor="#fff"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onClick"/>
+        android:onClick="onClick"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
