--- a/app/src/main/res/layout/activity_infotwo.xml
+++ b/app/src/main/res/layout/activity_infotwo.xml
@@ -4,9 +4,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="locale.example.ngondo.Infotwo">
+    tools:context="locale.example.ngondo.Infotwo"
+    android:background="@color/primary">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/find"
+        android:textColor="#fff"
+        android:textSize="30dp"
+        android:layout_above="@+id/textView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="83dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/come"
+        android:textColor="#fff"
+        android:id="@+id/textView"
+        android:textSize="25dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/take"
+        android:text="@string/take"
+        android:background="@color/accent"
+        android:layout_alignParentBottom="true"
+        android:textColor="#fff"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:onClick="onClick"/>
 
 </RelativeLayout>
