--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,11 @@
     tools:context="locale.example.ngondo.Home"
     android:background="@color/primary_dark">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/ivAttraction"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/attraction"/>
 
 </RelativeLayout>
