--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,51 +5,10 @@
     android:layout_height="match_parent"
     android:padding="10dp"
     tools:context="locale.example.ngondo.Login"
-    android:id="@+id/laLogin">
-
-    <TextView
-        android:id="@+id/tvUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Username"/>
-
-    
-    <EditText
-        android:id="@+id/etUsername"
-        android:layout_marginBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/Username"
-        />
-
-    <TextView
-        android:id="@+id/tvPassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/Password"/>
-
-     <EditText
-        android:id="@+id/etPassword"
-         android:layout_marginBottom="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/Password"
-        android:inputType="textPassword" />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/bLogin"
-        android:layout_marginBottom="10dp"
-        android:text="@string/Login"/>
-
-    <TextView
-        android:id="@+id/tvRegisterLink"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/regHere"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="10dp"
-        android:textStyle="bold"/>
+    android:id="@+id/laLogin"
+    android:gravity="center"
+    android:background="@color/primary"
+    android:weightSum="1">
 
 
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
@@ -57,6 +16,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:layout_gravity="center_horizontal|center_vertical"/>
+    
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/check"
+        android:textSize="20sp"
+        android:textColor="#fff"
         android:layout_gravity="center_horizontal"
-        />
+        android:layout_weight="0.11" />
+
+
     </LinearLayout>
