--- a/app/src/main/res/layout/fragment_intro2.xml
+++ b/app/src/main/res/layout/fragment_intro2.xml
@@ -3,11 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="locale.example.ngondo.Intro2">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:src="@drawable/bgfrag2"
+        android:scaleType="centerCrop"/>
 
 </FrameLayout>
